--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -56,4 +56,11 @@
         <item name="android:fontFamily">@font/poppins_regular</item>
     </style>
 
+    <!-- Creer le composant pour les petits textes gris -->
+    <style name="appbar_title">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">@font/poppins_medium</item>
+    </style>
+
 </resources>
