--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,16 @@
     <dimen name="paddingTop_text_card">10dp</dimen>
     <dimen name="text_size_card">13sp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="card_elevation_value">8dp</dimen>
+    <dimen name="margin_end_iconclear">16dp</dimen>
+    <dimen name="marginTop_icon_clear">20dp</dimen>
+    <dimen name="marginTop_linearLayout">70dp</dimen>
+    <dimen name="minHeight">48dp</dimen>
+    <dimen name="marginTop_inscription">20dp</dimen>
+    <dimen name="text_size_inscription_bar">18sp</dimen>
+    <dimen name="card_corner_radius">6dp</dimen>
+    <dimen name="text_size_continuer">15sp</dimen>
+    <dimen name="margin_start_divider">50dp</dimen>
+    <dimen name="layout_width_divider">1dp</dimen>
+    <dimen name="margin_end_divider">5dp</dimen>
 </resources>
