reccuperation christian work

--- a/app/src/main/res/layout/activity_inscription.xml
+++ b/app/src/main/res/layout/activity_inscription.xml
@@ -80,7 +80,7 @@
                     android:background="@color/background_text_card"
                     android:ems="10"
                     android:hint="@string/hint_name"
-                    android:hintTextColor="#455A64"
+                    android:textColorHint="#455A64"
                     android:inputType="textPersonName"
                     android:minHeight="48dp"
                     android:paddingLeft="@dimen/paddingLeft_text_card"
@@ -105,7 +105,7 @@
                     android:background="@color/background_text_card"
                     android:ems="10"
                     android:hint="@string/hint_email"
-                    android:hintTextColor="#455A64"
+                    android:textColorHint="#455A64"
                     android:inputType="textWebEmailAddress|textEmailAddress"
                     android:minHeight="48dp"
                     android:paddingLeft="15dp"
@@ -130,7 +130,7 @@
                     android:background="#D6D3D3"
                     android:ems="10"
                     android:hint="Numero de telephone"
-                    android:hintTextColor="#455A64"
+                    android:textColorHint="#455A64"
                     android:inputType="phone"
                     android:minHeight="48dp"
                     android:paddingLeft="15dp"
@@ -155,7 +155,7 @@
                     android:background="#D6D3D3"
                     android:ems="10"
                     android:hint="Mot de passe"
-                    android:hintTextColor="#455A64"
+                    android:textColorHint="#455A64"
                     android:inputType="textPassword"
                     android:minHeight="48dp"
                     android:paddingLeft="15dp"
@@ -181,7 +181,7 @@
                     android:background="#D6D3D3"
                     android:ems="10"
                     android:hint="Confirmation de mot de passe"
-                    android:hintTextColor="#455A64"
+                    android:textColorHint="#455A64"
                     android:inputType="textPassword"
                     android:minHeight="48dp"
                     android:paddingLeft="15dp"
