--- a/app/src/main/res/layout/fragment_profil_fragment.xml
+++ b/app/src/main/res/layout/fragment_profil_fragment.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/dark_gray"
     android:layout_height="match_parent"
     tools:context=".Profil_fragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:background="@color/dark_gray"
-        android:layout_height="match_parent">
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -97,7 +94,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="88dp"
                         android:layout_marginTop="70dp"
-                        android:background="@color/dark_gray"
                         android:src="@drawable/ic_camera"
                         android:elevation="10dp"
                         app:layout_constraintStart_toStartOf="@+id/cardView"
@@ -162,7 +158,7 @@
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/viewpager2"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
                     android:background="@color/white"/>
@@ -171,5 +167,3 @@
 
         </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-</FrameLayout>
