--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Base application theme. -->
     <style name="Theme.JCCL_Network_Project" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
@@ -20,6 +20,7 @@
         <item name="android:textSize">13sp</item>
         <item name="android:fontFamily">@font/poppins_regular</item>
     </style>
+
 
     <!-- Creer le composant pour le texte des boutton -->
     <style name="button_text">
@@ -55,5 +56,6 @@
         <item name="android:textSize">13sp</item>
         <item name="android:fontFamily">@font/poppins_regular</item>
     </style>
+
 
 </resources>
