--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -47,17 +47,18 @@
     <!-- User picture -->
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView2">
+
         <ImageView
             android:layout_width="133dp"
             android:layout_height="133dp"
-            android:src="@mipmap/img_user_picture"
-          />
+            android:src="@mipmap/img_user_picture" />
 
     </androidx.cardview.widget.CardView>
 
@@ -66,6 +67,7 @@
 
     <!-- Section edit pour le nom -->
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView5"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,5 +75,15 @@
         app:layout_constraintTop_toBottomOf="@+id/cardView2">
 
     </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/Editer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="136dp"
+        android:layout_marginTop="180dp"
+        android:text="Editer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
