--- a/app/src/main/res/layout/activity_o_t_p.xml
+++ b/app/src/main/res/layout/activity_o_t_p.xml
@@ -37,7 +37,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/continue_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
@@ -63,7 +63,7 @@
             android:fontFamily="@font/poppins_bold"
             android:text="Envoyer"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/continue_button" />
 
         <ScrollView
             android:id="@+id/scrollView2"
