--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -36,6 +36,18 @@
         <item name="android:fontFamily">@font/poppins_bold</item>
     </style>
 
+    <style name="title_doc">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">24sp</item>
+        <item name="fontFamily">@font/poppins_bold</item>
+    </style>
+
+    <style name="medium_description">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">20sp</item>
+        <item name="fontFamily">@font/poppins_medium</item>
+    </style>
+
     <!-- Creer le composant pour les sous-titres -->
     <style name="subtitle">
         <item name="android:textColor">@color/black</item>
