problem with R.txt

--- a/app/src/main/res/layout/activity_view_profile.xml
+++ b/app/src/main/res/layout/activity_view_profile.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/dark_gray"
-    android:layout_height="match_parent"
-    tools:context=".Profil_fragment">
-
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    tools:context=".ViewProfileActivity">
     <!-- TODO: Update blank fragment layout -->
+
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -91,9 +92,29 @@
                         tools:layout_editor_absoluteY="80dp" />
                 </androidx.cardview.widget.CardView>
 
+                <!-- icone de camera -->
+                <ImageView
+                    android:id="@+id/icon_camera"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="88dp"
+                    android:layout_marginTop="70dp"
+                    android:elevation="10dp"
+                    android:src="@drawable/ic_camera"
+                    app:layout_constraintStart_toStartOf="@+id/cardView"
+                    app:layout_constraintTop_toTopOf="@+id/cardView" />
 
+                <!-- icone edite -->
 
-
+                <ImageView
+                    android:id="@+id/icon_edit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="100dp"
+                    android:layout_marginEnd="40dp"
+                    android:src="@drawable/ic_edit"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <!-- user name -->
                 <TextView
@@ -158,3 +179,7 @@
 
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
