--- a/app/src/main/res/layout/fragment_profil_fragment.xml
+++ b/app/src/main/res/layout/fragment_profil_fragment.xml
@@ -9,11 +9,11 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+
     <Button
-        android:id="@+id/openApercu_profil"
+        android:id="@+id/button_open_apercu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="OpenApercu_Activity"
         android:text="Button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
